--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "set NODE_ENV=development&& npx nodemon app.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "config": "^4.0.1",
     "cookie-parser": "^1.4.7",
+    "debug": "^4.4.1",
     "express": "^5.1.0",
     "mongoose": "^8.16.3",
     "path": "^0.12.7"
