--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "config": "^4.0.1",
     "cookie-parser": "^1.4.7",
     "debug": "^4.4.1",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mongoose": "^8.16.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.4",
     "path": "^0.12.7"
   }
 }
